# mnemosyne

./: .env.example  .gitignore  MEMORY.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/: __init__.py
src/cli/: chat.py  main.py  main.py.bak  theme.py
src/cli/commands/: __init__.py  files.py  model.py  search.py  shell.py
src/core/: agent.py  brain.py  config.py  gemini_cli.py  ingester.py  ingester.py.bak  providers.py  tools.py  vector_store.py  web.py
