[project]
name = "mnemosyne"
version = "2.0.0"
description = "Local agentic coding assistant with infinite context. RAG-powered CLI with adaptive retrieval, smart context, and deep reasoning."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.0",
    "langchain>=1.2.9",
    "langchain-anthropic>=1.3.2",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=4.2.0",
    "langchain-groq>=1.1.2",
    "langchain-ollama>=1.0.1",
    "langchain-openai>=1.1.8",
    "langchain-text-splitters>=1.1.0",
    "pathspec>=1.0.4",
    "prompt-toolkit>=3.0.52",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "rich>=14.3.2",
    "typer[all]>=0.21.1",
    "duckduckgo-search>=6.1.0",
]

[project.scripts]
mnemosyne = "src.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
package = true

