[project]
name = "mnemosyne"
version = "3.0.0"
description = "Autonomous agentic coding assistant with infinite context. RAG-powered CLI with tool-calling agent loop, adaptive retrieval, and deep reasoning."
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Typing :: Typed",
]
dependencies = [
    "chromadb>=1.5.0",
    "langchain>=1.2.9",
    "langchain-anthropic>=1.3.2",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=4.2.0",
    "langchain-groq>=1.1.2",
    "langchain-ollama>=1.0.1",
    "langchain-openai>=1.1.8",
    "langchain-text-splitters>=1.1.0",
    "pathspec>=1.0.4",
    "prompt-toolkit>=3.0.52",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "rich>=14.3.2",
    "typer[all]>=0.21.1",
    "duckduckgo-search>=6.1.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.9.0",
    "mypy>=1.14.0",
    "pip-audit>=2.7.0",
    "pre-commit>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/Okymi-X/mnemosyne"
Documentation = "https://github.com/Okymi-X/mnemosyne#readme"
Repository = "https://github.com/Okymi-X/mnemosyne"
Issues = "https://github.com/Okymi-X/mnemosyne/issues"

[project.scripts]
mnemosyne = "src.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
package = true

# ── Ruff ─────────────────────────────────────────────────────────
[tool.ruff]
target-version = "py312"
line-length = 120
src = ["src"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "RUF",  # ruff-specific
]
ignore = [
    "E501",   # line length (handled by formatter)
    "E741",   # ambiguous variable name (single-letter vars in comprehensions)
    "B008",   # function call in default argument (Typer/FastAPI pattern)
    "B904",   # raise from in except (typer.Exit pattern)
    "B905",   # zip strict (not always needed)
    "B007",   # unused loop variable
    "N817",   # CamelCase imported as acronym (local aliases)
    "UP007",  # use X | Y for union (readability preference)
    "UP028",  # yield from (readability preference)
    "TCH",    # type-checking imports (can break runtime)
    "RUF005", # iterable unpacking vs concatenation (style preference)
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.format]
quote-style = "double"

# ── Mypy ─────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

